Fixed code according to Elena-Bruyako's requirements